@@ -1,8 +1,9 @@
-;;;
+;;; -*- coding: utf-8 -*-
 
 ;; bind backspace to be sensible, and help to M-h.
 (global-set-key "\C-h" 'backward-delete-char-untabify)
 (define-key global-map "\M-h" 'help-command)
 (setq help-char ?\M-h )
 
+;;;
 
