@@ -1,4 +1,4 @@
-;;;
+;;; -*- coding: utf-8 -*-
 
 ;; xdvi can jump to (and visually highlight) a position in the DVI file that corresponds to a
 ;; certain line number in the (La)TeX source file (`forward search').
